# informatics_laboratories_4

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
appendix/: report.docx
database/: init.sql
registration/: app.py
registration/templates/: account.html  login.html  registration.html
